--- a/hello.html
+++ b/hello.html
@@ -18,6 +18,9 @@
 	<div data-role="content">	
 		<p>Hello world</p>		
 	</div><!-- /content -->
+	<a href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css">jquery mobile css</a>
+	<a href="http://code.jquery.com/jquery-1.8.3.min.js">jquery mobile min183</a>
+	<a href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js">jquery mobile min121</a>
 
 </div><!-- /page -->
 
