--- a/hello.html
+++ b/hello.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-	<title>My Page</title> 
+	<title>JQuery hello</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
+	<link rel="stylesheet" href="jquery.mobile-1.4.5.min.css" />
+	<script src="jquery-1.8.3.min.js"></script>
+	<script src="jquery.mobile-1.4.5.min.js"></script>
 </head> 
 <body> 
 
 <div data-role="page">
 
 	<div data-role="header">
-		<h1>My Title</h1>
+		<h1>JQuery</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
 		<p>Hello world</p>		
 	</div><!-- /content -->
-	<a href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css">jquery mobile css</a>
-	<a href="http://code.jquery.com/jquery-1.8.3.min.js">jquery mobile min183</a>
-	<a href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js">jquery mobile min121</a>
+
 
 </div><!-- /page -->
 
