jquery use local

--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,9 @@
 <head> 
 	<title>JQuery hello</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="jquery.mobile-1.4.5.min.css" />
-	<script src="jquery-1.8.3.min.js"></script>
-	<script src="jquery.mobile-1.4.5.min.js"></script>
+	<link rel="stylesheet" href="./lib/jquery.mobile-1.4.5.min.css" />
+	<script src="./lib/jquery-1.8.3.min.js"></script>
+	<script src="./lib/jquery.mobile-1.4.5.min.js"></script>
 </head> 
 <body> 
 
@@ -18,7 +18,11 @@
 	<div data-role="content">	
 		<p>Hello world</p>		
 	</div><!-- /content -->
-
+	<a href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">jquery mobile css145</a>
+	<a href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css">jquery mobile css121</a>
+	<a href="http://code.jquery.com/jquery-1.8.3.min.js">jquery mobile min183</a>
+	<a href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js">jquery mobile min121</a>
+	<a href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js">jquery mobile min145</a>
 
 </div><!-- /page -->
 
