index lightbox sample

--- a/hello.html
+++ b/hello.html
@@ -39,6 +39,7 @@
 	<a href="https://code.jquery.com/ui/1.12.1/jquery-ui.js">jquery-ui.js</a><br/>
 	<a href="https://raw.githubusercontent.com/jquery/jquery-ui/master/ui/i18n/datepicker-zh-TW.js">jquery-ui-tw</a><br/>
 	<a href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css">jquery.mobile.structure-1.4.5.min.css</a>
+	<a href="http://code.jquery.com/jquery.js">jquery</a>
 	
 	<p>Date: <input type="text" id="datepicker"></p>
 
